# stormlight-archive

./: .envrc  .flake8  .gitignore  Dockerfile  Dockerfile.template  README.md  TODO.md  activate  docker-compose.yml  dodo.py  pyproject.toml  requirements.txt
capture/: boing.py  bugs.py  flash.py  obl.py  whip.py
src/: main.py  spinrun.sh
src/algos/: __init__.py  algo_utils.py  firefly.py  flames.py
src/arrangements/: __init__.py
src/displays/: arduino_based_displays.py  display_base.py  graphics_based_displays.py  raspberry_neopixel_displays.py
stormlight-archive/algos/: algo_utils.py  circles.py  firefly.py  flames.py
stormlight-archive/ci/shared/: dot_envrc  pyproject.toml
stormlight-archive/ci/templates/: dot_bashrc_append  dot_emacs.template  dot_zshrc.template
stormlight-archive/ci/templates/dev_user/: setupdev_user_container_start.sh
stormlight-archive/displays/: display_base.py
stormlight-archive/systemd/: stormlight-archive.service
stormlight_archive/: main.py  spinrun.sh
stormlight_archive/algos/: __init__.py  algo_utils.py  circles.py  firefly.py  flames.py  twinkle.py
stormlight_archive/arrangements/: __init__.py  hop_arch.py
stormlight_archive/ci/shared/: dot_envrc  pyproject.toml
stormlight_archive/ci/templates/: Dockerfile.pre_build_info  dot_bashrc_append  dot_zshrc.template
stormlight_archive/ci/templates/dev_user/: setup_dev_user_container_start.sh
stormlight_archive/displays/: arduino_based_displays.py  display_base.py  graphics_based_displays.py  raspberry_neopixel_displays.py  wled_neopixel_displays.py
stormlight_archive/strands/: __init__.py  arch_strand.py
