[tool.poetry]
name = "stormlight-archive"
version = "0.1.0"
description = "Application for running LED strings"
authors = ["Stuart Stanley <stu00@mac.com>"]
packages = [{include = "stormlight_archive"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
doit = "^0.36.0"
wled = "^0.21.0"
numpy = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning>=0.17.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
[dependency-groups]
sim_display = [
    "vtk (>=9.5.2,<10.0.0)"
]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
